--- a/client/docs/config.json
+++ b/client/docs/config.json
@@ -225,6 +225,14 @@
           "Params": "MoveParams"
         }
       }
+    },
+    {
+      "url": "./tmp-swagger-gen/opinit/ophost/v1/query.swagger.json",
+      "operationIds": {
+        "rename": {
+          "Params": "OPHostParams"
+        }
+      }
     }
   ]
 }
