add swagger & call oracle service to oracle client

--- a/client/docs/config.json
+++ b/client/docs/config.json
@@ -241,6 +241,9 @@
           "Params": "OPHostParams"
         }
       }
+    },
+    {
+      "url": "./tmp-swagger-gen/slinky/oracle/v1/query.swagger.json"
     }
   ]
 }
