--- a/client/docs/config.json
+++ b/client/docs/config.json
@@ -178,10 +178,23 @@
       }
     },
     {
-      "url": "./tmp-swagger-gen/ibc/applications/fetchprice/consumer/v1/query.swagger.json"
+      "url": "./tmp-swagger-gen/ibc/applications/fee/v1/query.swagger.json",
+      "operationIds": {
+        "rename": {
+          "Params": "FeeParams"
+        }
+      }
     },
     {
-      "url": "./tmp-swagger-gen/ibc/applications/fee/v1/query.swagger.json",
+      "url": "./tmp-swagger-gen/packetforward/v1/query.swagger.json",
+      "operationIds": {
+        "rename": {
+          "Params": "PFMParams"
+        }
+      }
+    },
+    {
+      "url": "./tmp-swagger-gen/icq/v1/query.swagger.json",
       "operationIds": {
         "rename": {
           "Params": "FeeParams"
