implement fetchprice ibc app to allow l2s to fetch the oracle prices from the l1

--- a/client/docs/config.json
+++ b/client/docs/config.json
@@ -186,6 +186,14 @@
       }
     },
     {
+      "url": "./tmp-swagger-gen/ibc/applications/fetchprice/v1/query.swagger.json",
+      "operationIds": {
+        "rename": {
+          "Params": "FetchPriceParams"
+        }
+      }
+    },
+    {
       "url": "./tmp-swagger-gen/packetforward/v1/query.swagger.json",
       "operationIds": {
         "rename": {
