feat: ibc apps (#67)
* adopt icq and pakcet forward ibc apps

* swagger update

* use preloaded authority addr

* implement fetchprice ibc app to allow l2s to fetch the oracle prices from the l1

* fix consensus version

--- a/client/docs/config.json
+++ b/client/docs/config.json
@@ -178,10 +178,31 @@
       }
     },
     {
-      "url": "./tmp-swagger-gen/ibc/applications/fetchprice/consumer/v1/query.swagger.json"
+      "url": "./tmp-swagger-gen/ibc/applications/fee/v1/query.swagger.json",
+      "operationIds": {
+        "rename": {
+          "Params": "FeeParams"
+        }
+      }
     },
     {
-      "url": "./tmp-swagger-gen/ibc/applications/fee/v1/query.swagger.json",
+      "url": "./tmp-swagger-gen/ibc/applications/fetchprice/v1/query.swagger.json",
+      "operationIds": {
+        "rename": {
+          "Params": "FetchPriceParams"
+        }
+      }
+    },
+    {
+      "url": "./tmp-swagger-gen/packetforward/v1/query.swagger.json",
+      "operationIds": {
+        "rename": {
+          "Params": "PFMParams"
+        }
+      }
+    },
+    {
+      "url": "./tmp-swagger-gen/icq/v1/query.swagger.json",
       "operationIds": {
         "rename": {
           "Params": "FeeParams"
