Revert "Merge remote-tracking branch 'origin/main' into indexer"
This reverts commit de664b5cf4102b2bdc329e83af1e580017614778, reversing
changes made to ac6103cd59e881584ddba675496dfbd704709d40.

--- a/proto/buf.gen.pulsar.yaml
+++ b/proto/buf.gen.pulsar.yaml
@@ -2,14 +2,13 @@ version: v1
 managed:
   enabled: true
   go_package_prefix:
-    default: github.com/initia-labs/initia/api
+    default: cosmossdk.io/api
     except:
       - buf.build/googleapis/googleapis
       - buf.build/cosmos/gogo-proto
       - buf.build/cosmos/cosmos-proto
       - buf.build/cosmos/ibc
     override:
-      buf.build/cosmos/cosmos-sdk: cosmossdk.io/api
 plugins:
   - name: go-pulsar
     out: ../api
