allow to set multiple channels and update perm module to store both port id and channel id

--- a/client/docs/config.json
+++ b/client/docs/config.json
@@ -194,6 +194,9 @@
       }
     },
     {
+      "url": "./tmp-swagger-gen/ibc/applications/perm/v1/query.swagger.json"
+    },
+    {
       "url": "./tmp-swagger-gen/packetforward/v1/query.swagger.json",
       "operationIds": {
         "rename": {
