--- a/images/private/Dockerfile
+++ b/images/private/Dockerfile
@@ -1,7 +1,7 @@
 FROM golang:1.21-alpine AS go-builder
 #ARG arch=x86_64
 
-# See https://github.com/initia-labs/initiavm/releases
+# See https://github.com/initia-labs/movevm/releases
 ARG LIBINITIAVM_VERSION=v0.2.0-beta.2.1
 
 # this comes from standard alpine nightly file
@@ -24,11 +24,11 @@ ARG GITHUB_ACCESS_TOKEN
 ENV GOPRIVATE=github.com/initia-labs/*
 RUN git config --global url."https://${GITHUB_ACCESS_TOKEN}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
 
-# See https://github.com/initia-labs/initiavm/releases
+# See https://github.com/initia-labs/movevm/releases
 ADD https://github.com/gruntwork-io/fetch/releases/download/v0.4.6/fetch_linux_amd64 /usr/bin/fetch
 RUN chmod +x /usr/bin/fetch
 ENV GITHUB_OAUTH_TOKEN=$GITHUB_ACCESS_TOKEN
-RUN fetch --repo="https://github.com/initia-labs/initiavm" --tag="${LIBINITIAVM_VERSION}" --release-asset="libinitia_muslc.*.a" /lib/
+RUN fetch --repo="https://github.com/initia-labs/movevm" --tag="${LIBINITIAVM_VERSION}" --release-asset="libinitia_muslc.*.a" /lib/
 RUN cp /lib/libinitia_muslc.`uname -m`.a /lib/libinitia_muslc.a
 
 # force it to use static lib (from above) not standard libinitia.so file
