--- a/images/private/Dockerfile
+++ b/images/private/Dockerfile
@@ -2,7 +2,7 @@ FROM golang:1.21-alpine AS go-builder
 #ARG arch=x86_64
 
 # See https://github.com/initia-labs/movevm/releases
-ARG LIBINITIAVM_VERSION=v0.2.0
+ARG LIBMOVEVM_VERSION=v0.2.0
 
 # this comes from standard alpine nightly file
 #  https://github.com/rust-lang/docker-rust-nightly/blob/master/alpine3.12/Dockerfile
@@ -28,7 +28,7 @@ RUN git config --global url."https://${GITHUB_ACCESS_TOKEN}:x-oauth-basic@github
 ADD https://github.com/gruntwork-io/fetch/releases/download/v0.4.6/fetch_linux_amd64 /usr/bin/fetch
 RUN chmod +x /usr/bin/fetch
 ENV GITHUB_OAUTH_TOKEN=$GITHUB_ACCESS_TOKEN
-RUN fetch --repo="https://github.com/initia-labs/movevm" --tag="${LIBINITIAVM_VERSION}" --release-asset="libmovevm_muslc.*.a" /lib/
+RUN fetch --repo="https://github.com/initia-labs/movevm" --tag="${LIBMOVEVM_VERSION}" --release-asset="libmovevm_muslc.*.a" /lib/
 RUN cp /lib/libmovevm_muslc.`uname -m`.a /lib/libmovevm_muslc.a
 
 # force it to use static lib (from above) not standard libmovevm.so file
