--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,104 +1,104 @@
-name: Docker
+# name: Docker
 
-on:
-  workflow_dispatch:
-  push:
-    branches:
-      - "main"
-    tags:
-      - "v*"
-    paths:
-      - "**.go"
-      - "go.mod"
-      - "go.sum"
-  pull_request:
-    branches:
-      - "main"
-    paths:
-      - "**.go"
-      - "go.mod"
-      - "go.sum"
+# on:
+#   workflow_dispatch:
+#   push:
+#     branches:
+#       - "main"
+#     tags:
+#       - "v*"
+#     paths:
+#       - "**.go"
+#       - "go.mod"
+#       - "go.sum"
+#   pull_request:
+#     branches:
+#       - "main"
+#     paths:
+#       - "**.go"
+#       - "go.mod"
+#       - "go.sum"
 
-env:
-  REGISTRY: ghcr.io
+# env:
+#   REGISTRY: ghcr.io
 
-jobs:
-  initiad:
-    name: Initiad
-    runs-on: ubuntu-latest
+# jobs:
+#   initiad:
+#     name: Initiad
+#     runs-on: ubuntu-latest
 
-    permissions:
-      contents: read
-      packages: write
+#     permissions:
+#       contents: read
+#       packages: write
 
-    outputs:
-      tags: ${{ steps.meta.outputs.tags }}
+#     outputs:
+#       tags: ${{ steps.meta.outputs.tags }}
 
-    env:
-      IMAGE_NAME: initiad
+#     env:
+#       IMAGE_NAME: initiad
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v3
 
-      - name: Log in to the Container registry
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+#       - name: Log in to the Container registry
+#         uses: docker/login-action@v2
+#         with:
+#           registry: ${{ env.REGISTRY }}
+#           username: ${{ github.actor }}
+#           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}
+#       - name: Extract metadata (tags, labels) for Docker
+#         id: meta
+#         uses: docker/metadata-action@v4
+#         with:
+#           images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}
 
-      - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          build-args: "GITHUB_ACCESS_TOKEN=${{ secrets.GH_READ_TOKEN }}"
-          file: images/private/Dockerfile
-          push: ${{ startsWith(github.ref, 'refs/tags') }} # push image only for tags
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+#       - name: Build and push
+#         uses: docker/build-push-action@v4
+#         with:
+#           build-args: "GITHUB_ACCESS_TOKEN=${{ secrets.GH_READ_TOKEN }}"
+#           file: images/private/Dockerfile
+#           push: ${{ startsWith(github.ref, 'refs/tags') }} # push image only for tags
+#           tags: ${{ steps.meta.outputs.tags }}
+#           labels: ${{ steps.meta.outputs.labels }}
 
-  node:
-    name: Node
-    needs: initiad
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
+#   node:
+#     name: Node
+#     needs: initiad
+#     runs-on: ubuntu-latest
+#     permissions:
+#       contents: read
+#       packages: write
 
-    env:
-      IMAGE_NAME: node
+#     env:
+#       IMAGE_NAME: node
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v3
 
-      - name: Log in to the Container registry
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+#       - name: Log in to the Container registry
+#         uses: docker/login-action@v2
+#         with:
+#           registry: ${{ env.REGISTRY }}
+#           username: ${{ github.actor }}
+#           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}
+#       - name: Extract metadata (tags, labels) for Docker
+#         id: meta
+#         uses: docker/metadata-action@v4
+#         with:
+#           images: ${{ env.REGISTRY }}/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}
 
-      - name: Get base image
-        run: echo "BASE_IMAGE=$(echo ${{ needs.initiad.outputs.tags }} | cut -d',' -f1)" >> "$GITHUB_ENV"
+#       - name: Get base image
+#         run: echo "BASE_IMAGE=$(echo ${{ needs.initiad.outputs.tags }} | cut -d',' -f1)" >> "$GITHUB_ENV"
 
-      - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          build-args: "GITHUB_ACCESS_TOKEN=${{ secrets.GH_READ_TOKEN }},BASE_IMAGE=${{ env.BASE_IMAGE }}"
-          file: images/node/Dockerfile
-          push: ${{ startsWith(github.ref, 'refs/tags') }} # push image only for tags
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+#       - name: Build and push
+#         uses: docker/build-push-action@v4
+#         with:
+#           build-args: "GITHUB_ACCESS_TOKEN=${{ secrets.GH_READ_TOKEN }},BASE_IMAGE=${{ env.BASE_IMAGE }}"
+#           file: images/node/Dockerfile
+#           push: ${{ startsWith(github.ref, 'refs/tags') }} # push image only for tags
+#           tags: ${{ steps.meta.outputs.tags }}
+#           labels: ${{ steps.meta.outputs.labels }}
