--- a/.github/workflows/build-and-upload.yml
+++ b/.github/workflows/build-and-upload.yml
@@ -6,9 +6,9 @@ on:
       - 'v*'
 
 jobs:
-  build-linux-amd64:
-    uses: ./.github/workflows/build-linux-amd64.yml
-    secrets: inherit
+  # build-linux-amd64:
+  #   uses: ./.github/workflows/build-linux-amd64.yml
+  #   secrets: inherit
 
   build-linux-arm64:
     uses: ./.github/workflows/build-linux-arm64.yml
