--- a/.github/workflows/build-linux-arm64.yml
+++ b/.github/workflows/build-linux-arm64.yml
@@ -1,55 +1,63 @@
 name: Build Linux ARM64
-
 on:
   workflow_call:
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
-      - name: Set up ARM Runner
-        uses: pguyot/arm-runner-action@v2
-        with:
-          architecture: arm64
-
+      
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: '1.22.4'
-
+      
       - name: Build for Linux ARM64
+        uses: uraimo/run-on-arch-action@v2
+        with:
+          arch: aarch64
+          distro: ubuntu22.04
+          githubToken: ${{ secrets.GITHUB_TOKEN }}
+          install: |
+            apt-get update
+            apt-get install -y make gcc
+          run: |
+            echo "Building for GOARCH=arm64"
+            export GOARCH=arm64
+            export CGO_ENABLED=1
+            make build-linux-with-shared-library GOARCH=arm64
+            cd ./build
+            mkdir -p initia_${GITHUB_REF#refs/tags/}
+            mv libmovevm.so initia_${GITHUB_REF#refs/tags/}/libmovevm.arm64.so
+            mv libcompiler.so initia_${GITHUB_REF#refs/tags/}/libcompiler.arm64.so
+            mv initiad initia_${GITHUB_REF#refs/tags/}/
+            tar -czvf initia_${GITHUB_REF#refs/tags/}_Linux_arm64.tar.gz initia_${GITHUB_REF#refs/tags/}
+      
+      - name: Move artifacts
         run: |
-          docker build --platform linux/arm64 --tag initia/initiad-shared ./ -f ./shared.Dockerfile
-          cd ./build
-          mkdir -p initia_${GITHUB_REF#refs/tags/}
-          mv libmovevm.so initia_${GITHUB_REF#refs/tags/}/libmovevm.arm64.so
-          mv libcompiler.so initia_${GITHUB_REF#refs/tags/}/libcompiler.arm64.so
-          mv initiad initia_${GITHUB_REF#refs/tags/}/
-          tar -czvf initia_${GITHUB_REF#refs/tags/}_Linux_arm64.tar.gz initia_${GITHUB_REF#refs/tags/}
-          
+          mkdir -p ./artifacts
+          mv ./build/initia_${GITHUB_REF#refs/tags/}_Linux_arm64.tar.gz ./artifacts/
+
       - name: Verify binary architecture
         run: |
-          file ./build/initia_${GITHUB_REF#refs/tags/}/initiad
-          file ./build/initia_${GITHUB_REF#refs/tags/}/libmovevm.amd64.so
-          file ./build/initia_${GITHUB_REF#refs/tags/}/libcompiler.amd64.so
+          file ./artifacts/initia_${GITHUB_REF#refs/tags/}_Linux_arm64.tar.gz
+          tar -tvf ./artifacts/initia_${GITHUB_REF#refs/tags/}_Linux_arm64.tar.gz
 
       - name: Google Auth
         uses: 'google-github-actions/auth@v2'
         with:
           credentials_json: '${{ secrets.GCP_SA_KEY }}'
-
+      
       - name: Set up Cloud SDK
         uses: 'google-github-actions/setup-gcloud@v2'
-
+      
       - name: Upload to GCS
         env:
           GCS_BUCKET: ${{ secrets.GCS_BUCKET }}
         run: |
-          gsutil cp ./build/initia_${GITHUB_REF#refs/tags/}_Linux_arm64.tar.gz gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags/}/
-
+          gsutil cp ./artifacts/initia_${GITHUB_REF#refs/tags/}_Linux_arm64.tar.gz gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags/}/
+      
       - name: Verify upload and Generate public URL
         env:
           GCS_BUCKET: ${{ secrets.GCS_BUCKET }}
