--- a/.github/workflows/build-linux-arm64.yml
+++ b/.github/workflows/build-linux-arm64.yml
@@ -1,72 +1,121 @@
-name: Build Linux ARM64
+name: Build Linux Binaries
+
 on:
   workflow_call:
+
 jobs:
-  build:
+  build-amd64:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      
-      - name: Build for Linux ARM64
-        uses: uraimo/run-on-arch-action@v2
-        with:
-          arch: aarch64
-          distro: ubuntu22.04
-          githubToken: ${{ secrets.GITHUB_TOKEN }}
-          install: |
-            apt-get update
-            apt-get install -y make gcc git curl
-            curl -OL https://go.dev/dl/go1.22.4.linux-arm64.tar.gz
-            tar -C /usr/local -xzf go1.22.4.linux-arm64.tar.gz
-            echo 'export PATH=$PATH:/usr/local/go/bin' >> $HOME/.profile
-            echo 'export PATH=$PATH:/usr/local/go/bin' >> $HOME/.bashrc
-            source $HOME/.profile
-          run: |
-            echo "Building for GOARCH=arm64"
-            export GOARCH=arm64
-            export CGO_ENABLED=1
-            export PATH=$PATH:/usr/local/go/bin
-            go version
-            make build-linux-with-shared-library GOARCH=arm64
-            cd ./build
-            mkdir -p initia_${GITHUB_REF#refs/tags/}
-            mv libmovevm.so initia_${GITHUB_REF#refs/tags/}/libmovevm.arm64.so
-            mv libcompiler.so initia_${GITHUB_REF#refs/tags/}/libcompiler.arm64.so
-            mv initiad initia_${GITHUB_REF#refs/tags/}/
-            tar -czvf initia_${GITHUB_REF#refs/tags/}_Linux_arm64.tar.gz initia_${GITHUB_REF#refs/tags/}
 
-      - name: Move artifacts
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.22.4'
+
+      - name: Build for Linux AMD64
+        env:
+          GOARCH: amd64
         run: |
-          mkdir -p ./artifacts
-          mv ./build/initia_${GITHUB_REF#refs/tags/}_Linux_arm64.tar.gz ./artifacts/
+          echo "Building for GOARCH=amd64"
+          make build-linux-with-shared-library GOARCH=amd64
+          cd ./build
+          mkdir -p initia_${GITHUB_REF#refs/tags/}
+          mv libmovevm.so initia_${GITHUB_REF#refs/tags/}/libmovevm.amd64.so
+          mv libcompiler.so initia_${GITHUB_REF#refs/tags/}/libcompiler.amd64.so
+          mv initiad initia_${GITHUB_REF#refs/tags/}/
+          tar -czvf initia_${GITHUB_REF#refs/tags/}_Linux_amd64.tar.gz initia_${GITHUB_REF#refs/tags/}
 
       - name: Verify binary architecture
         run: |
-          file ./artifacts/initia_${GITHUB_REF#refs/tags/}_Linux_arm64.tar.gz
-          tar -tvf ./artifacts/initia_${GITHUB_REF#refs/tags/}_Linux_arm64.tar.gz
+          file ./build/initia_${GITHUB_REF#refs/tags/}/initiad
+          file ./build/initia_${GITHUB_REF#refs/tags/}/libmovevm.amd64.so
+          file ./build/initia_${GITHUB_REF#refs/tags/}/libcompiler.amd64.so
 
       - name: Google Auth
         uses: 'google-github-actions/auth@v2'
         with:
           credentials_json: '${{ secrets.GCP_SA_KEY }}'
-      
+
       - name: Set up Cloud SDK
         uses: 'google-github-actions/setup-gcloud@v2'
-      
+
       - name: Upload to GCS
         env:
           GCS_BUCKET: ${{ secrets.GCS_BUCKET }}
         run: |
-          gsutil cp ./artifacts/initia_${GITHUB_REF#refs/tags/}_Linux_arm64.tar.gz gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags/}/
-      
+          gsutil cp ./build/initia_${GITHUB_REF#refs/tags/}_Linux_amd64.tar.gz gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags/}/
+
       - name: Verify upload and Generate public URL
         env:
           GCS_BUCKET: ${{ secrets.GCS_BUCKET }}
         run: |
-          if gsutil stat gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags/}/initia_${GITHUB_REF#refs/tags/}_Linux_arm64.tar.gz; then
+          if gsutil stat gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags/}/initia_${GITHUB_REF#refs/tags/}_Linux_amd64.tar.gz; then
             echo "File successfully uploaded"
-            echo "Public URL: https://storage.googleapis.com/${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags/}/initia_${GITHUB_REF#refs/tags/}_Linux_arm64.tar.gz" >> $GITHUB_STEP_SUMMARY
+            echo "Public URL: https://storage.googleapis.com/${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags/}/initia_${GITHUB_REF#refs/tags/}_Linux_amd64.tar.gz" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "File upload failed"
+            exit 1
+          fi
+
+  build-arm:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+        with:
+          platforms: arm
+
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.22.4'
+
+      - name: Build for Linux ARM
+        env:
+          GOARCH: arm
+        run: |
+          echo "Building for GOARCH=arm"
+          make build-linux-with-shared-library GOARCH=arm
+          cd ./build
+          mkdir -p initia_${GITHUB_REF#refs/tags/}
+          mv libmovevm.so initia_${GITHUB_REF#refs/tags/}/libmovevm.arm.so
+          mv libcompiler.so initia_${GITHUB_REF#refs/tags/}/libcompiler.arm.so
+          mv initiad initia_${GITHUB_REF#refs/tags/}/
+          tar -czvf initia_${GITHUB_REF#refs/tags/}_Linux_arm.tar.gz initia_${GITHUB_REF#refs/tags/}
+
+      - name: Verify binary architecture
+        run: |
+          file ./build/initia_${GITHUB_REF#refs/tags/}/initiad
+          file ./build/initia_${GITHUB_REF#refs/tags/}/libmovevm.arm.so
+          file ./build/initia_${GITHUB_REF#refs/tags/}/libcompiler.arm.so
+
+      - name: Google Auth
+        uses: 'google-github-actions/auth@v2'
+        with:
+          credentials_json: '${{ secrets.GCP_SA_KEY }}'
+
+      - name: Set up Cloud SDK
+        uses: 'google-github-actions/setup-gcloud@v2'
+
+      - name: Upload to GCS
+        env:
+          GCS_BUCKET: ${{ secrets.GCS_BUCKET }}
+        run: |
+          gsutil cp ./build/initia_${GITHUB_REF#refs/tags/}_Linux_arm.tar.gz gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags/}/
+
+      - name: Verify upload and Generate public URL
+        env:
+          GCS_BUCKET: ${{ secrets.GCS_BUCKET }}
+        run: |
+          if gsutil stat gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags/}/initia_${GITHUB_REF#refs/tags/}_Linux_arm.tar.gz; then
+            echo "File successfully uploaded"
+            echo "Public URL: https://storage.googleapis.com/${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags/}/initia_${GITHUB_REF#refs/tags/}_Linux_arm.tar.gz" >> $GITHUB_STEP_SUMMARY
           else
             echo "File upload failed"
             exit 1
