--- a/.github/workflows/build-linux-arm64.yml
+++ b/.github/workflows/build-linux-arm64.yml
@@ -62,6 +62,7 @@ jobs:
 
   build-arm:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -76,24 +77,29 @@ jobs:
         with:
           go-version: '1.22.4'
 
+      - name: Install ARM dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc-aarch64-linux-gnu
+
       - name: Build for Linux ARM
         env:
-          GOARCH: arm
+          GOARCH: arm64
         run: |
-          echo "Building for GOARCH=arm"
-          make build-linux-with-shared-library GOARCH=arm
+          echo "Building for GOARCH=arm64"
+          CGO_ENABLED=1 CC=aarch64-linux-gnu-gcc GOARCH=arm64 go build -o build/initiad ./cmd/initiad
           cd ./build
           mkdir -p initia_${GITHUB_REF#refs/tags/}
-          mv libmovevm.so initia_${GITHUB_REF#refs/tags/}/libmovevm.arm.so
-          mv libcompiler.so initia_${GITHUB_REF#refs/tags/}/libcompiler.arm.so
+          mv libmovevm.so initia_${GITHUB_REF#refs/tags/}/libmovevm.arm64.so
+          mv libcompiler.so initia_${GITHUB_REF#refs/tags/}/libcompiler.arm64.so
           mv initiad initia_${GITHUB_REF#refs/tags/}/
-          tar -czvf initia_${GITHUB_REF#refs/tags/}_Linux_arm.tar.gz initia_${GITHUB_REF#refs/tags/}
+          tar -czvf initia_${GITHUB_REF#refs/tags/}_Linux_arm64.tar.gz initia_${GITHUB_REF#refs/tags/}
 
       - name: Verify binary architecture
         run: |
           file ./build/initia_${GITHUB_REF#refs/tags/}/initiad
-          file ./build/initia_${GITHUB_REF#refs/tags/}/libmovevm.arm.so
-          file ./build/initia_${GITHUB_REF#refs/tags/}/libcompiler.arm.so
+          file ./build/initia_${GITHUB_REF#refs/tags/}/libmovevm.arm64.so
+          file ./build/initia_${GITHUB_REF#refs/tags/}/libcompiler.arm64.so
 
       - name: Google Auth
         uses: 'google-github-actions/auth@v2'
@@ -107,15 +113,15 @@ jobs:
         env:
           GCS_BUCKET: ${{ secrets.GCS_BUCKET }}
         run: |
-          gsutil cp ./build/initia_${GITHUB_REF#refs/tags/}_Linux_arm.tar.gz gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags/}/
+          gsutil cp ./build/initia_${GITHUB_REF#refs/tags/}_Linux_arm64.tar.gz gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags/}/
 
       - name: Verify upload and Generate public URL
         env:
           GCS_BUCKET: ${{ secrets.GCS_BUCKET }}
         run: |
-          if gsutil stat gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags/}/initia_${GITHUB_REF#refs/tags/}_Linux_arm.tar.gz; then
+          if gsutil stat gs://${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags/}/initia_${GITHUB_REF#refs/tags/}_Linux_arm64.tar.gz; then
             echo "File successfully uploaded"
-            echo "Public URL: https://storage.googleapis.com/${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags/}/initia_${GITHUB_REF#refs/tags/}_Linux_arm.tar.gz" >> $GITHUB_STEP_SUMMARY
+            echo "Public URL: https://storage.googleapis.com/${GCS_BUCKET}/initia/${GITHUB_REF#refs/tags/}/initia_${GITHUB_REF#refs/tags/}_Linux_arm64.tar.gz" >> $GITHUB_STEP_SUMMARY
           else
             echo "File upload failed"
             exit 1
